<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lisview_app.ui.shop.ShopFragment"
        android:label="@string/menu_compra"
        tools:layout="@layout/fragment_shop" >
        <action
            android:id="@+id/action_nav_home_to_nav_info2"
            app:destination="@id/nav_info" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lisview_app.ui.task.TaskFragment"
        android:label="@string/menu_tareas"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.lisview_app.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.lisview_app.ui.tools.ToolsFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.lisview_app.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

</navigation>